--- a/Semana 3 - Planetas y Satélites/css/planetsPage-navbar.css
+++ b/Semana 3 - Planetas y Satélites/css/planetsPage-navbar.css
@@ -6,10 +6,11 @@ nav a {
     text-decoration: none;
 }
 
-nav a:hover {
+a:hover{
+    border-bottom: 1px solid white;
     font-weight: 600;
 }
 
 .active {
-    border-bottom: 3px solid rgb(197, 163, 163);
+    border-bottom: 1px solid white;
 }
